@@ -46,7 +46,8 @@
 
  Other changes:
 
-   - myDndWindow: new class which acts as a DnD source/target.
+   - myDndPopup: new class which manages both the icon and the dnd destination.
+   - myDndWindow: new class which manages the child windows.
    - myBookDnd: class is renamed to myDndBook.
    - ofa_hub_dossier_is_writable(): new method.
    - ofaNomodalPage: replaced by myDndWindow.
